tests/baselines/reference/genericTypeAssertions1.errors.txt
tests/cases/compiler/genericTypeAssertions1.ts(3,5): error TS2322: Type 'A<数字>' is not assignable to type 'A<文字>'.
  Type '数字' is not assignable to type '文字'.
tests/cases/compiler/genericTypeAssertions1.ts(4,5): error TS2322: Type 'A<A<数字>>' is not assignable to type 'A<数字>'.
  Type 'A<数字>' is not assignable to type '数字'.
tests/cases/compiler/genericTypeAssertions1.ts(4,21): error TS2352: Type 'A<数字>' cannot be converted to type 'A<A<数字>>'.
  Type '数字' is not comparable to type 'A<数字>'.


==== tests/cases/compiler/genericTypeAssertions1.ts (3 errors) ====
    class A<T> { foo(x: T) { }}
    var foo = new A<number>();
    var r: A<string> = <A<number>>new A(); // error
        ~
!!! error TS2322: Type 'A<数字>' is not assignable to type 'A<文字>'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
    var r2: A<number> = <A<A<number>>>foo; // error
        ~~
!!! error TS2322: Type 'A<A<数字>>' is not assignable to type 'A<数字>'.
!!! error TS2322:   Type 'A<数字>' is not assignable to type '数字'.
                        ~~~~~~~~~~~~~~~~~
!!! error TS2352: Type 'A<数字>' cannot be converted to type 'A<A<数字>>'.
!!! error TS2352:   Type '数字' is not comparable to type 'A<数字>'.